--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>CRUD</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <a href="/pacientes">lista de pacientes</a>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h1 class="text-center">CRUD</h1>
+            <a href="/pacientes" class="btn btn-primary btn-lg d-block mx-auto">Lista de pacientes</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
