--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,8 +9,11 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h1 class="text-center">CRUD</h1>
-            <a href="/pacientes" class="btn btn-primary btn-lg d-block mx-auto">Lista de pacientes</a>
+            <h1 class="text-center mb-4">CRUD</h1>
+            <div class="d-grid gap-3">
+                <a href="/pacientes" class="btn btn-primary btn-lg">Lista de pacientes</a>
+                <a href="/doctores" class="btn btn-primary btn-lg">Lista de doctores</a>
+            </div>
         </div>
     </div>
 </div>
